# HamonCore

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml
libs/common/: CMakeLists.txt
libs/common/test/: CMakeLists.txt
libs/common/test/include/: constexpr_test.hpp  get_random_value.hpp  iterator_test.hpp  noexcept_test.hpp  pch.hpp  ranges_test.hpp  serialize_test.hpp
libs/common_test/: CMakeLists.txt
libs/common_test/include/: constexpr_test.hpp  get_random_value.hpp  iterator_test.hpp  pch.hpp  ranges_test.hpp  serialize_test.hpp
libs/detail/: CMakeLists.txt  README.md
libs/detail/include/hamon/detail/: converts_from_any_cvref.hpp  decay_copy.hpp  exception_guard.hpp  max_diff_type.hpp  max_size_type.hpp  overload_priority.hpp  scope_guard.hpp  statically_widen.hpp
libs/format/test/: CMakeLists.txt
libs/format/test/src/: format_test.hpp  format_test_exceptions.hpp  format_test_helper.hpp  format_test_locale.hpp  format_test_map.hpp  format_test_map_exceptions.hpp  format_test_sequence.hpp  format_test_sequence_exceptions.hpp  format_test_set.hpp  format_test_set_exceptions.hpp  format_test_string.hpp  format_test_string_exceptions.hpp  format_test_tuple.hpp  format_test_tuple_exceptions.hpp  format_test_unicode.hpp  unit_test_format.cpp  unit_test_format_basic_format_arg.cpp  unit_test_format_basic_format_args.cpp  unit_test_format_basic_format_context.cpp  unit_test_format_basic_format_parse_context.cpp  unit_test_format_basic_format_string.cpp  unit_test_format_enable_nonlocking_formatter_optimization.cpp  unit_test_format_format.cpp  unit_test_format_format_args.cpp  unit_test_format_format_error.cpp  unit_test_format_format_kind.cpp  unit_test_format_format_string.cpp  unit_test_format_format_to.cpp  unit_test_format_format_to_n.cpp  unit_test_format_format_to_n_result.cpp  unit_test_format_formattable.cpp  unit_test_format_formatted_size.cpp  unit_test_format_make_format_args.cpp  unit_test_format_make_wformat_args.cpp  unit_test_format_range_format.cpp  unit_test_format_runtime_format.cpp  unit_test_format_runtime_format_string.cpp  unit_test_format_vformat.cpp  unit_test_format_vformat_to.cpp  unit_test_format_wformat_args.cpp  (+1 more)
libs/map/test/: CMakeLists.txt
libs/map/test/src/: unit_test_map.cpp  unit_test_map_erase_if.cpp  unit_test_multimap_erase_if.cpp
libs/map/test/src/map/: unit_test_map_at.cpp  unit_test_map_at_heterogeneous.cpp  unit_test_map_begin_end.cpp  unit_test_map_clear.cpp  unit_test_map_contains.cpp  unit_test_map_count.cpp  unit_test_map_count_heterogeneous.cpp  unit_test_map_ctad.cpp  unit_test_map_ctor.cpp  unit_test_map_ctor_allocator.cpp  unit_test_map_ctor_comp.cpp  unit_test_map_ctor_copy.cpp  unit_test_map_ctor_copy_allocator.cpp  unit_test_map_ctor_default.cpp  unit_test_map_ctor_initializer_list.cpp  unit_test_map_ctor_iterator.cpp  unit_test_map_ctor_move.cpp  unit_test_map_ctor_move_allocator.cpp  unit_test_map_ctor_range.cpp  unit_test_map_dtor.cpp  unit_test_map_emplace.cpp  unit_test_map_emplace_hint.cpp  unit_test_map_empty.cpp  unit_test_map_equal_range.cpp  unit_test_map_equal_range_heterogeneous.cpp  unit_test_map_erase.cpp  unit_test_map_erase_heterogeneous.cpp  unit_test_map_erase_if.cpp  unit_test_map_erase_iterator.cpp  unit_test_map_erase_key.cpp  unit_test_map_erase_position.cpp  unit_test_map_extract.cpp  unit_test_map_extract_heterogeneous.cpp  unit_test_map_extract_key.cpp  unit_test_map_extract_position.cpp  unit_test_map_find.cpp  unit_test_map_find_heterogeneous.cpp  unit_test_map_get_allocator.cpp  unit_test_map_insert.cpp  unit_test_map_insert_copy.cpp  (+43 more)
libs/map/test/src/multimap/: unit_test_multimap_begin_end.cpp  unit_test_multimap_clear.cpp  unit_test_multimap_contains.cpp  unit_test_multimap_count.cpp  unit_test_multimap_count_heterogeneous.cpp  unit_test_multimap_ctad.cpp  unit_test_multimap_ctor.cpp  unit_test_multimap_ctor_allocator.cpp  unit_test_multimap_ctor_comp.cpp  (+62 more)
libs/ranges/test/: CMakeLists.txt
libs/ranges/test/src/: unit_test_ranges.cpp  unit_test_ranges_adaptors.cpp  unit_test_ranges_borrowed_iterator_t.cpp  unit_test_ranges_borrowed_subrange_t.cpp  unit_test_ranges_const_iterator_t.cpp  unit_test_ranges_const_sentinel_t.cpp  unit_test_ranges_from_range_t.cpp  unit_test_ranges_iterator_t.cpp  unit_test_ranges_p2609r3.cpp  unit_test_ranges_range_common_reference_t.cpp  unit_test_ranges_range_const_reference_t.cpp  unit_test_ranges_range_difference_t.cpp  unit_test_ranges_range_reference_t.cpp  unit_test_ranges_range_rvalue_reference_t.cpp  unit_test_ranges_range_size_t.cpp  unit_test_ranges_range_value_t.cpp  unit_test_ranges_sentinel_t.cpp  unit_test_ranges_view_base.cpp
libs/string_view/: CMakeLists.txt  README.md  string_view.natvis
libs/string_view/include/hamon/: string_view.hpp
libs/string_view/test/: CMakeLists.txt
libs/string_view/test/src/: string_view_test_helper.hpp  unit_test_string_view_assign.cpp  unit_test_string_view_at.cpp  unit_test_string_view_back.cpp  unit_test_string_view_bracket.cpp  unit_test_string_view_compare.cpp  unit_test_string_view_compare_operator.cpp  unit_test_string_view_concepts.cpp  unit_test_string_view_contains.cpp  unit_test_string_view_copy.cpp  unit_test_string_view_ctor.cpp  unit_test_string_view_data.cpp  unit_test_string_view_empty.cpp  unit_test_string_view_ends_with.cpp  unit_test_string_view_find.cpp  unit_test_string_view_find_first_not_of.cpp  unit_test_string_view_find_first_of.cpp  unit_test_string_view_find_last_not_of.cpp  unit_test_string_view_find_last_of.cpp  unit_test_string_view_front.cpp  unit_test_string_view_general.cpp  unit_test_string_view_hash.cpp  unit_test_string_view_iterator.cpp  unit_test_string_view_length.cpp  unit_test_string_view_literals.cpp  unit_test_string_view_max_size.cpp  unit_test_string_view_output_stream.cpp  unit_test_string_view_remove_prefix.cpp  unit_test_string_view_remove_suffix.cpp  unit_test_string_view_rfind.cpp  unit_test_string_view_size.cpp  unit_test_string_view_starts_with.cpp  unit_test_string_view_substr.cpp  unit_test_string_view_swap.cpp
(+6736 files in other folders)
